--- a/src/sass/app/components/_app-header.scss
+++ b/src/sass/app/components/_app-header.scss
@@ -18,6 +18,11 @@
     font-size: 26px;
     padding: 0 15px;
     line-height: 50px;
+    @media(min-width: 768px) {
+        flex: 0 0 auto;
+        display: block;
+        width: 230px;
+    }
 }
 
 .app-search {
@@ -25,6 +30,9 @@
     display: flex;
     align-self: center;
     margin-right: 15px;
+    @media(max-width: 480px) {
+        display: none;
+    }
 }
 
 .app-search__input {
@@ -44,4 +52,50 @@
     color: rgba(0, 0, 0, .8);
     background: none;
     cursor: pointer;
+}
+
+.app-nav {
+    @include list-unstyled();
+    display: flex;
+    margin-bottom: 0;
+    justify-content: flex-end;
+    @media(min-width: 768px) {
+        flex: 1 0 auto;
+    }
+}
+
+.app-nav__item {
+    display: block;
+    padding: 18px;
+    line-height: 18px;
+    color: #fff;
+    transition: background-color 0.3s ease;
+    &:hover,
+    &:focus {
+        background: rgba(0, 0, 0, .1);
+    }
+}
+
+.app-sidebar__toggle {
+    padding: 0 15px;
+    color: #fff;
+    line-height: 50px;
+    transition: background-color 0.3s ease;
+    &:focus,
+    &:hover {
+        color: #fff;
+        background-color: rgba(0, 0, 0, .1);
+        text-decoration: none;
+    }
+    @media(max-width:767px) {
+        order: -1;
+    }
+    @media(min-width:767px) {
+        display: none;
+    }
+}
+
+.app-sidebar__toggle>span {
+    display: inline-block;
+    padding: 15px;
 }
