--- a/src/sass/app/components/_app-header.scss
+++ b/src/sass/app/components/_app-header.scss
@@ -40,7 +40,7 @@
     padding: 5px 10px;
     padding-right: 30px;
     border-radius: 2px;
-    background-color: rgba(255, 255, 255, .8);
+    background-color: rgba(255, 255, 255, 0.8);
 }
 
 .app-search__button {
