--- a/src/sass/app/components/_app-sidebar.scss
+++ b/src/sass/app/components/_app-sidebar.scss
@@ -25,8 +25,17 @@
     position: relative;
     display: flex;
     align-items: center;
+    color: white;
     padding: 12px 15px;
     border-left: 2px solid transparent;
+}
+
+.active {
+    padding: 12px 48px;
+    font-size: larger;
+    color: #00A0FF;
+    background-color: #e5e5e5;
+    border-radius: 15px 0px 0px 15px;
 }
 
 .app.sidebar-toggled .app-sidebar {
